try out new version

--- a/notebooks/test_soupx_basics.ipynb
+++ b/notebooks/test_soupx_basics.ipynb
@@ -13,8 +13,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T12:45:04.427935Z",
-     "start_time": "2025-08-28T12:45:04.382616Z"
+     "end_time": "2025-09-01T07:19:24.880243Z",
+     "start_time": "2025-09-01T07:19:24.426437Z"
     }
    },
    "source": [
@@ -33,10 +33,15 @@
    ],
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SoupX version: 0.2.0\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'adjust_counts' from 'soupx.correction' (C:\\Users\\nruff\\PycharmProjects\\soupx-python\\soupx\\correction.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mImportError\u001B[39m                               Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[1]\u001B[39m\u001B[32m, line 10\u001B[39m\n\u001B[32m      8\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01msys\u001B[39;00m\n\u001B[32m      9\u001B[39m sys.path.append(\u001B[33m'\u001B[39m\u001B[33m..\u001B[39m\u001B[33m'\u001B[39m)\n\u001B[32m---> \u001B[39m\u001B[32m10\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01msoupx\u001B[39;00m\n\u001B[32m     12\u001B[39m \u001B[38;5;28mprint\u001B[39m(\u001B[33mf\u001B[39m\u001B[33m\"\u001B[39m\u001B[33mSoupX version: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00msoupx.__version__\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m\"\u001B[39m)\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~\\PycharmProjects\\soupx-python\\soupx\\__init__.py:124\u001B[39m\n\u001B[32m    122\u001B[39m \u001B[38;5;66;03m# Backwards compatibility\u001B[39;00m\n\u001B[32m    123\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01m.\u001B[39;00m\u001B[34;01mestimation\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m estimate_soup, calculate_contamination_fraction\n\u001B[32m--> \u001B[39m\u001B[32m124\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01m.\u001B[39;00m\u001B[34;01mcorrection\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m adjust_counts \u001B[38;5;28;01mas\u001B[39;00m _adjust_counts_old\n\u001B[32m    126\u001B[39m \u001B[38;5;66;03m# Map old function names\u001B[39;00m\n\u001B[32m    127\u001B[39m estimate_soup = \u001B[38;5;28;01mlambda\u001B[39;00m sc: sc._calculate_soup_profile() \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mhasattr\u001B[39m(sc, \u001B[33m'\u001B[39m\u001B[33m_calculate_soup_profile\u001B[39m\u001B[33m'\u001B[39m) \u001B[38;5;28;01melse\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m\n",
+      "\u001B[31mImportError\u001B[39m: cannot import name 'adjust_counts' from 'soupx.correction' (C:\\Users\\nruff\\PycharmProjects\\soupx-python\\soupx\\correction.py)"
      ]
     }
    ],
@@ -55,7 +60,7 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T12:45:04.822825Z",
+     "end_time": "2025-09-01T07:19:24.939012300Z",
      "start_time": "2025-08-28T12:45:04.633958Z"
     }
    },
@@ -154,7 +159,7 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T12:45:04.903037Z",
+     "end_time": "2025-09-01T07:19:24.941348100Z",
      "start_time": "2025-08-28T12:45:04.890009Z"
     }
    },
@@ -201,7 +206,7 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T12:45:12.971423Z",
+     "end_time": "2025-09-01T07:19:24.942344800Z",
      "start_time": "2025-08-28T12:45:04.939423Z"
     }
    },
@@ -376,7 +381,7 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T12:45:17.516642Z",
+     "end_time": "2025-09-01T07:19:24.947444700Z",
      "start_time": "2025-08-28T12:45:12.997077Z"
     }
    },
@@ -758,7 +763,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T12:45:17.545301Z",
+     "end_time": "2025-09-01T07:19:24.948843200Z",
      "start_time": "2025-08-28T12:45:17.542647Z"
     }
    },
@@ -770,7 +775,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T12:45:22.123628Z",
+     "end_time": "2025-09-01T07:19:24.950675200Z",
      "start_time": "2025-08-28T12:45:17.569667Z"
     }
    },
@@ -1147,7 +1152,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T12:45:26.595169Z",
+     "end_time": "2025-09-01T07:19:24.952205500Z",
      "start_time": "2025-08-28T12:45:22.147720Z"
     }
    },
@@ -1410,7 +1415,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T12:45:26.651142Z",
+     "end_time": "2025-09-01T07:19:24.952868900Z",
      "start_time": "2025-08-28T12:45:26.642158Z"
     }
    },
@@ -1582,7 +1587,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T12:45:26.737609Z",
+     "end_time": "2025-09-01T07:19:24.954517300Z",
      "start_time": "2025-08-28T12:45:26.674565Z"
     }
    },
@@ -1715,7 +1720,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T12:52:09.394544Z",
+     "end_time": "2025-09-01T07:19:24.956514600Z",
      "start_time": "2025-08-28T12:45:26.760270Z"
     }
    },
@@ -2182,7 +2187,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T13:19:48.655721Z",
+     "end_time": "2025-09-01T07:19:24.957510600Z",
      "start_time": "2025-08-28T13:19:20.530805Z"
     }
    },
